switch hstream server log level to DEBUG

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -8,4 +8,4 @@ CMD mkdir -p /run/sshd && \
     SERVER_ID=$(shuf -i 1-4294967296 -n 1) && \
     MY_IP=$(hostname -I) && \
     sleep 10 && \
-    hstream-server --host 0.0.0.0 --port 6570 --address $MY_IP --store-config /root/logdevice.conf --zkuri "zookeeper:2188" --server-id $SERVER_ID
+    hstream-server --host 0.0.0.0 --port 6570 --address $MY_IP --store-config /root/logdevice.conf --zkuri "zookeeper:2188" --server-id $SERVER_ID --log-level debug --log-with-color
