--- a/docker/ld/Dockerfile
+++ b/docker/ld/Dockerfile
@@ -1,1 +1,33 @@
-FROM ghcr.io/hstreamdb/jepsen_logdevice:0.1.0
+ARG HSTREAM_IMAGE="hstreamdb/hstream:latest"
+FROM ${HSTREAM_IMAGE}
+
+ARG USE_CHINA_MIRROR
+# Mirror
+RUN if [ "$USE_CHINA_MIRROR" = true ] ; then sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list ; fi
+
+# Basic system stuff
+RUN apt-get update
+RUN apt-get install -y apt-transport-https
+
+# Install packages
+RUN apt-get -qy update && \
+    apt-get -qy install \
+        dos2unix \
+        openssh-server \
+        pwgen
+
+# Config Jepsen
+COPY ./init-ssh.sh /usr/local/bin/init-ssh
+RUN chmod +x /usr/local/bin/init-ssh
+
+# Configure SSHD
+RUN sed -i "s/#PermitRootLogin prohibit-password/PermitRootLogin yes/g" /etc/ssh/sshd_config
+
+# Install Jepsen deps
+RUN apt-get install -qy build-essential bzip2 curl dnsutils faketime iproute2 iptables iputils-ping logrotate man man-db net-tools ntpdate psmisc python rsyslog sudo tar unzip vim wget ca-certificates
+
+CMD mkdir -p /run/sshd && \
+    /usr/local/bin/init-ssh && \
+    /usr/sbin/sshd && \
+    MY_IP=$(hostname -I | head -n1 | awk '{print $1;}') && \
+    ld-dev-cluster --root /data/store --use-tcp --no-interactive --tcp-host $MY_IP
