--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.7'
 x-node:
-  &default-node
+  &hserver-node
   build: ./node
   env_file:
     - ./secret/node.env
@@ -13,7 +13,6 @@ x-node:
     - /run/lock:size=100M
   volumes:
     - "jepsen-shared:/var/jepsen/shared"
-    - "ld-shared:/data/store"
     - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
   networks:
     - jepsen
@@ -22,9 +21,35 @@ x-node:
   ports:
     - ${JEPSEN_PORT:-22}
 
+x-ld:
+  &logdevice-node
+  build: ./ld
+  env_file:
+    - ./secret/node.env
+    - ./secret/control.env
+  secrets:
+    - authorized_keys
+  tty: true
+  tmpfs:
+    - /run:size=100M
+    - /run/lock:size=100M
+  volumes:
+    - "jepsen-shared:/var/jepsen/shared"
+    - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
+  networks:
+    - jepsen
+  cap_add:
+    - ALL
+  ports:
+    - ${JEPSEN_PORT:-22}
+  expose:
+      - "4440"
+      - "4441"
+      - "4443"
+      - "6440"
+
 volumes:
   jepsen-shared:
-  ld-shared:
 
 secrets:
   authorized_keys:
@@ -34,10 +59,12 @@ networks:
   jepsen:
 
 services:
-  logdevice:
-    container_name: jepsen-ld
-    hostname: ld
-    build: ./ld
+  ld-admin:
+    container_name: jepsen-ld-admin
+    hostname: admin
+    depends_on:
+      - zookeeper
+    build: ./admin
     env_file: ./secret/node.env
     secrets:
       - authorized_keys
@@ -45,14 +72,16 @@ services:
       - /run:size=100M
       - /run/lock:size=100M
     expose:
-      - "38000-49000"
+      - "4440"
+      - "4441"
+      - "4443"
+      - "6440"
     networks:
       - jepsen
     cap_add:
       - ALL
     volumes:
       - "jepsen-shared:/var/jepsen/shared"
-      - "ld-shared:/data/store"
       - "/sys/fs/cgroup:/sys/fs/cgroup:ro"
 
   zookeeper:
@@ -66,7 +95,7 @@ services:
       - /run:size=100M
       - /run/lock:size=100M
     expose:
-      - "2188"
+      - "2181"
       - "2888"
       - "3888"
     networks:
@@ -81,12 +110,13 @@ services:
     container_name: jepsen-control
     hostname: control
     depends_on:
-      - n1
-      - n2
-      - n3
-      - n4
-      - n5
-
+      - zookeeper
+      - hserver-1
+      - hserver-2
+      - hserver-3
+      - hserver-4
+      - hserver-5
+      - ld-admin
     build: ./control
     env_file: ./secret/control.env
     privileged: true
@@ -98,38 +128,79 @@ services:
     volumes:
       - "../:/home/Work"
       - "jepsen-shared:/var/jepsen/shared"
-  n1:
-    << : *default-node
+
+  hstore-1:
+    << : *logdevice-node
+    container_name: jepsen-ld1
+    hostname: ld1
+    depends_on:
+      - zookeeper
+  hstore-2:
+    << : *logdevice-node
+    container_name: jepsen-ld2
+    hostname: ld2
+    depends_on:
+      - zookeeper
+  hstore-3:
+    << : *logdevice-node
+    container_name: jepsen-ld3
+    hostname: ld3
+    depends_on:
+      - zookeeper
+  hstore-4:
+    << : *logdevice-node
+    container_name: jepsen-ld4
+    hostname: ld4
+    depends_on:
+      - zookeeper
+
+  hserver-1:
+    << : *hserver-node
     container_name: jepsen-n1
     hostname: n1
     depends_on:
       - zookeeper
-      - logdevice
-  n2:
-    << : *default-node
+      - hstore-1
+      - hstore-2
+      - hstore-3
+      - hstore-4
+  hserver-2:
+    << : *hserver-node
     container_name: jepsen-n2
     hostname: n2
     depends_on:
       - zookeeper
-      - logdevice
-  n3:
-    << : *default-node
+      - hstore-1
+      - hstore-2
+      - hstore-3
+      - hstore-4
+  hserver-3:
+    << : *hserver-node
     container_name: jepsen-n3
     hostname: n3
     depends_on:
       - zookeeper
-      - logdevice
-  n4:
-    << : *default-node
+      - hstore-1
+      - hstore-2
+      - hstore-3
+      - hstore-4
+  hserver-4:
+    << : *hserver-node
     container_name: jepsen-n4
     hostname: n4
     depends_on:
       - zookeeper
-      - logdevice
-  n5:
-    << : *default-node
+      - hstore-1
+      - hstore-2
+      - hstore-3
+      - hstore-4
+  hserver-5:
+    << : *hserver-node
     container_name: jepsen-n5
     hostname: n5
     depends_on:
       - zookeeper
-      - logdevice
+      - hstore-1
+      - hstore-2
+      - hstore-3
+      - hstore-4
