--- a/.github/workflows/ci_repo_dispatch.yml
+++ b/.github/workflows/ci_repo_dispatch.yml
@@ -8,6 +8,7 @@ jobs:
   jepsen-test:
     runs-on: ubuntu-latest
     name: The simplest jepsen test for HStreamDB
+    timeout-minutes: 60
     steps:
       - uses: actions/checkout@v2
         with:
