ci: upload only necessary files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,5 @@ jobs:
           name: jepsen-test-result
           path: |
             store/HStream
-            !store/latest
-            !store/current
+            !store/HStream/latest
           retention-days: 7
