docker: update dependency python to python3

--- a/docker/admin/Dockerfile
+++ b/docker/admin/Dockerfile
@@ -17,7 +17,7 @@ RUN apt-get -qy update && \
         pwgen
 
 # Install Jepsen deps
-RUN apt-get install -qy build-essential bzip2 curl dnsutils faketime iproute2 iptables iputils-ping logrotate man man-db net-tools ntpdate psmisc python rsyslog sudo tar unzip vim wget ca-certificates zookeeper
+RUN apt-get install -qy build-essential bzip2 curl dnsutils faketime iproute2 iptables iputils-ping logrotate man man-db net-tools ntpdate psmisc python3 rsyslog sudo tar unzip vim wget ca-certificates zookeeper
 
 # Config Jepsen
 COPY ./init-ssh.sh /usr/local/bin/init-ssh
