--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,10 @@ name: CI
 
 on:
   push:
-  #schedule:
-  #  - cron: 0 0/4 * * *
+    branches: [main, master]
+
+  pull_request:
+    branches: [main, master]
 
 jobs:
   jepsen-test:
