--- a/docker/admin/Dockerfile
+++ b/docker/admin/Dockerfile
@@ -1,13 +1,15 @@
 ARG HSTREAM_IMAGE="hstreamdb/hstream:latest"
 FROM ${HSTREAM_IMAGE}
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 ARG USE_CHINA_MIRROR
 # Mirror
 RUN if [ "$USE_CHINA_MIRROR" = true ] ; then sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list ; fi
 
 # Basic system stuff
-RUN apt-get update
-RUN apt-get install -y apt-transport-https
+RUN apt-get -qy update && \
+    apt-get -qy install apt-transport-https
 
 # Install packages
 RUN apt-get -qy update && \
@@ -17,7 +19,10 @@ RUN apt-get -qy update && \
         pwgen
 
 # Install Jepsen deps
-RUN apt-get install -qy build-essential bzip2 curl dnsutils faketime iproute2 iptables iputils-ping logrotate man man-db net-tools ntpdate psmisc python3 rsyslog sudo tar unzip vim wget ca-certificates zookeeper
+RUN apt-get install -qy build-essential bzip2 curl dnsutils faketime iproute2 iptables iputils-ping logrotate man man-db net-tools ntpdate psmisc python3 rsyslog sudo tar unzip vim wget ca-certificates
+
+# Special for admin: Install zookeeper
+RUN apt-get install -qy zookeeper
 
 # Config Jepsen
 COPY ./init-ssh.sh /usr/local/bin/init-ssh
