--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -1,10 +1,11 @@
-FROM zookeeper:3.7
+ARG HSTREAM_IMAGE="hstreamdb/hstream:latest"
+FROM ${HSTREAM_IMAGE}
 
 ENV DEBIAN_FRONTEND=noninteractive
 
 ARG USE_CHINA_MIRROR
 # Mirror
-RUN if [ "$USE_CHINA_MIRROR" = true ] ; then sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list && sed -i 's|security.debian.org/debian-security|mirrors.ustc.edu.cn/debian-security|g' /etc/apt/sources.list ; fi
+RUN if [ "$USE_CHINA_MIRROR" = true ] ; then sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list ; fi
 
 # Basic system stuff
 RUN apt-get -qy update && \
@@ -15,7 +16,9 @@ RUN apt-get -qy update && \
 RUN apt-get -qy update && \
     apt-get -qy --no-install-recommends install \
         dos2unix \
-        openssh-server
+        openssh-server \
+        pwgen \
+        zookeeper # Special for admin. In fact we only need client...
 
 # Install Jepsen deps
 RUN apt-get -qy --no-install-recommends install \
@@ -50,7 +53,6 @@ RUN apt-get -qy --no-install-recommends install \
 COPY ./init-ssh.sh /usr/local/bin/init-ssh
 RUN chmod +x /usr/local/bin/init-ssh
 
-EXPOSE 22 2181 2888 3888
+EXPOSE 22
 
-CMD /usr/local/bin/init-ssh && \
-    zkServer.sh start-foreground
+RUN chmod +x /usr/local/bin/init-ssh
