--- a/docker/ld/Dockerfile
+++ b/docker/ld/Dockerfile
@@ -1,40 +1,13 @@
-ARG HSTREAM_IMAGE="hstreamdb/hstream:latest"
-FROM ${HSTREAM_IMAGE}
-
-ENV DEBIAN_FRONTEND=noninteractive
-
-ARG USE_CHINA_MIRROR
-# Mirror
-RUN if [ "$USE_CHINA_MIRROR" = true ] ; then sed -i 's/archive.ubuntu.com/mirrors.ustc.edu.cn/g' /etc/apt/sources.list ; fi
-
-# Basic system stuff
-RUN apt-get -qy update && \
-    apt-get -qy install apt-transport-https
-
-# Install packages
-RUN apt-get -qy update && \
-    apt-get -qy install \
-        dos2unix \
-        openssh-server \
-        pwgen
-
-# Install Jepsen deps
-RUN apt-get install -qy build-essential bzip2 curl dnsutils faketime iproute2 iptables iputils-ping logrotate man man-db net-tools ntpdate psmisc python3 rsyslog sudo tar unzip vim wget ca-certificates
-
-# Config Jepsen
-COPY ./init-ssh.sh /usr/local/bin/init-ssh
-RUN chmod +x /usr/local/bin/init-ssh
-
-# Configure SSHD
-RUN sed -i "s/#PermitRootLogin prohibit-password/PermitRootLogin yes/g" /etc/ssh/sshd_config
+ARG BASE_IMAGE="jepsen-hstream:base"
+FROM ${BASE_IMAGE}
 
 # Waiting for admin
 COPY ./wait.sh /usr/local/bin/wait
 RUN chmod +x /usr/local/bin/wait
 
-CMD mkdir -p /run/sshd && \
-    /usr/local/bin/init-ssh && \
-    /usr/sbin/sshd && \
+EXPOSE 22 6440
+
+CMD /usr/local/bin/init-ssh && \
     MY_IP=$(hostname -I | head -n1 | awk '{print $1;}') && \
     mkdir -p /data/store && \
     echo 1 | tee /data/store/NSHARDS && \
