optimize logs: only output control and redirect other nodes to file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,5 +56,6 @@ jobs:
           name: jepsen-test-result
           path: |
             store/HStream
+            /tmp/*.log
             !store/HStream/latest
           retention-days: 7
